tests/ui/de-tuple-struct.stderr
error: currently only structs with named fields are supported
 --> tests/ui/de-tuple-struct.rs:3:10
  |
3 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
